--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <center>
             <div class="header btn btn-info">
               <h1>
-                Ping Pong
+                Ping Pong, made by Devik Jha 
               </h1>
-              <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">instructions</button>
+              <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Click for instructions</button>
             </div>
-            <button class="btn btn-success start" onclick="startGame()">Start gamee</button>
+            <button class="btn btn-success start" onclick="startGame()">Start game</button>
             <br>
             <h3 class="btn btn-warning">Status: </h3>
             <br>
@@ -38,20 +38,21 @@
                   </div>
                   <div class="modal-body">
                     <h4>
-                        First keep the laptop screen straight
+                        First, keep the laptop screen straight.
                         <br>
-                        move 3-4 feet from the laptop
+                        Move 3-4 feet from the laptop.
                         <br>
-                        move your right wrist up and down, and a dot should appear
+                        Move your right wrist up and down, and a dot should appear.
                         <br>
-                        press play and distance yourself again
+                        Press play and distance yourself again.
                         <br>
-                        the red paddle is yours, which will move with your wrist.
+                        The red paddle is yours, which will move with your wrist.
                     </h4>
                   </div>
                 </div>
               </div>
             </div>
+            <button onclick="restart()"></button>
           </center>
         <script src="main.js"></script>
     </body>
