--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--created by prashant shukla-->
+<!--created by prashant shukla and thus is entirely their fauly-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -47,6 +47,8 @@
                         Press play and distance yourself again.
                         <br>
                         The red paddle is yours, which will move with your wrist.
+                        <br><br><br>
+                        Disclaimer: This project is absolutely horrible, you have to use your mouse instead (not my fault)
                     </h4>
                   </div>
                 </div>
